# MDevPlat

./: Dockerfile  docker-entrypoint.sh
cdt/applications/docker/: package.json  tsconfig.json
cdt/applications/electron/: package.json  tsconfig.json
cdt/theia-extensions/product/: package.json
cdt/theia-extensions/product/src/browser/: branding-util.tsx  theia-ide-about-dialog.tsx  theia-ide-contribution.tsx  theia-ide-frontend-module.ts  theia-ide-getting-started-widget.tsx
cdtDemo/NetworkManage/: CMakeLists.txt  NetworkManage.pro  netutils.cpp  netutils.h  widget.cpp  widget.h  widget.ui
cdtDemo/NetworkManage/private/: microdata_p.h  netutils_p.h
cdtDemo/ProMsg/: CMakeLists.txt  ProMsg.pro  widget.cpp  widget.h  widget.ui
cdtDemo/sharedmemory/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  microdata.cpp  microdata.h  sharedmemory.cpp  sharedmemory.h  sharedmemory.pro
cdtDemo/sharedmemory/private/: sharedmemory_p.h
cdtDemo/sqlmodel/: CMakeLists.txt  sqlmodel.pro  widget.cpp  widget.h  widget.ui
lib/: libglib-2.0.so.0  libpthread.so.0
new/: Dockerfile  docker-entrypoint.sh
new/lib/: libgthread-2.0.so.0
service/: service.pro
service/AndroidDeviceManager/: AndroidDeviceManager.pro  clientworker.cpp  clientworker.h  main.cpp  server.cpp  server.h  tcpdatareceiver.cpp  tcpdatareceiver.h
service/AndroidDeviceManager/adb/: adb.pri  androiddebugbridge.cpp  androiddebugbridge.h  processhandler.cpp  processhandler.h  websockifyjs.cpp  websockifyjs.h
service/Launcher/: Launcher.pro  main.cpp  processhandler.cpp  processhandler.h
service/SimulatorManager/: SimulatorManager.pro
service/SimulatorManager/app/: app.pro  clientworker.cpp  clientworker.h  handleldterminalconstants.h  handleldterminaldefines.h  handleldterminalutils.cpp  handleldterminalutils.h  main.cpp  server.cpp  synchronousprocess.cpp  synchronousprocess.h
service/SimulatorManager/app/android/: android.pri  androidsdksettings.cpp  androidsdksettings.h
service/SimulatorManager/app/qemu/: qemu.pri  qemusettings.cpp  qemusettings.h
service/SimulatorManager/app/simulator/: abstractsimulatormanager.cpp  abstractsimulatormanager.h  androidsettings.cpp  androidsettings.h  androidsimulator.cpp  androidsimulator.h  androidsimulatormanager.cpp  androidsimulatormanager.h  globalsimulatormanager.cpp  globalsimulatormanager.h  linuxsimulator.cpp  linuxsimulator.h  linuxsimulatormanager.cpp  linuxsimulatormanager.h  simulator.cpp  simulator.h  simulator.pri
service/SimulatorManager/app/simulator/filebrowser/: abstractfilebrowser.cpp  abstractfilebrowser.h  androidfilebrowser.cpp  androidfilebrowser.h  filebrowser.pri  filebrowserfactory.cpp  filebrowserfactory.h  filebrowserwidget.cpp  filebrowserwidget.h  filebrowserwidget.ui  linuxfilebrowser.cpp  linuxfilebrowser.h  pathlabel.cpp  pathlabel.h
service/SimulatorManager/app/ssh/: sftpchannel.h  sftpdefs.h  sftpfilesystemmodel.cpp  sftpfilesystemmodel.h  ssh.pri  ssh_global.h  sshconnection.h  sshconnectionmanager.h  sshdirecttcpiptunnel.h  sshforwardedtcpiptunnel.h  sshhostkeydatabase.h  sshkeygenerator_copy.h  sshpseudoterminal.h  sshremoteprocess.h  sshremoteprocessrunner.h  sshtcpipforwardserver.h
service/SimulatorManager/botan/: botan.pro
service/WizardService/: WizardService.pro  clientworker.cpp  clientworker.h  main.cpp  server.cpp  server.h  tcpdatareceiver.cpp  tcpdatareceiver.h  wizarddefines.h  wizardutils.cpp  wizardutils.h
service/WizardService/templates/: CMakeLists.txt  subdirs.pro
service/WizardService/templates/kernel/: CMakeLists.txt  main.cpp.tpl  plugins.pri  project.pri  project.pro
service/WizardService/templates/plugin/: CMakeLists.txt  MANIFEST.MF  classname.cpp  classname.h  classname_global.h  main.cpp  mainwindow.ui  plug.xml  project.pro  widget.cpp  widget.h  widget.ui
site/: package.json
site/src/app/: page.tsx
